--- a/build.gradle
+++ b/build.gradle
@@ -424,3 +424,22 @@ configure(rootProject) {
 		}
 	}
 }
+buildscript {
+	repositories {
+		maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+		maven{ url 'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
+	}
+	dependencies {
+		classpath 'com.android.tools.build:gradle:2.2.3'
+
+// NOTE: Do not place your application dependencies here; they belong
+// in the individual module build.gradle files
+	}
+}
+
+allprojects {
+	repositories {
+		maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+		maven{ url 'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
+	}
+}
